Correct all racer list to display columns other than major wins with no wrap

--- a/app/assets/stylesheets/mating_lists.scss
+++ b/app/assets/stylesheets/mating_lists.scss
@@ -1,5 +1,9 @@
 .mating_lists_show {
 
+  td:not(.allows_wrap) {
+    white-space: nowrap;
+  }
+
   .actions {
     margin-top: 20px;
   }
